# openkrab

./: .dockerignore  .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  PLAN.md  PORTING.md  PROGRESS_UPDATE_2026_02_17.md  README.md  RUST_FULL_REWRITE_PLAN.md  RUST_MIGRATION_PROGRESS.md  SECURITY.md  docker-compose.yml  find_norust.ps1  find_norust2.ps1  install.sh  openclaw.mjs  openclaw.node-reference.mjs  package.json  telemetry-id
crates/openclaw-agents/: Cargo.toml
crates/openclaw-agents/src/: context.rs  lib.rs  llm.rs  runtime.rs
crates/openclaw-channels/discord/: Cargo.toml
crates/openclaw-channels/slack/: Cargo.toml
crates/openclaw-channels/telegram/: Cargo.toml
crates/openclaw-cli/: Cargo.toml
crates/openclaw-cli/src/: main.rs
crates/openclaw-core/: Cargo.toml
crates/openclaw-core/src/: channel.rs  config.rs  error.rs  lib.rs  message.rs  session.rs  user.rs
crates/openclaw-gateway/: Cargo.toml
crates/openclaw-gateway/src/: auth.rs  lib.rs  main.rs  protocol.rs  session.rs
crates/openclaw-media/: Cargo.toml
crates/openclaw-media/src/: image_processor.rs  lib.rs  svg.rs
crates/openclaw-sessions/: Cargo.toml
crates/openclaw-sessions/src/: lib.rs
crates/openclaw-storage/: Cargo.toml
crates/openclaw-storage/src/: error.rs  lib.rs
crates/openclaw-storage/tests/: integration_tests.rs
crates/openclaw-tools/: Cargo.toml
crates/openclaw-tools/src/: bash.rs  file.rs  lib.rs  search.rs
krabkrab/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION_NOTES.md  PORTING.md  README.md  RELEASE_READINESS.md
krabkrab/.github/: dependabot.yml
krabkrab/.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
krabkrab/.github/workflows/: rust.yml
krabkrab/agents/: Cargo.toml
krabkrab/agents/src/: lib.rs
krabkrab/channels/: Cargo.toml
krabkrab/channels/src/: lib.rs  slack.rs  telegram.rs  whatsapp.rs
krabkrab/cli/: Cargo.toml
krabkrab/cli/src/: main.rs
krabkrab/common/: Cargo.toml
krabkrab/common/src/: config.rs  hooks.rs  infra.rs  lib.rs  logger.rs  types.rs  utils.rs
krabkrab/docs/: CNAME  brave-search.md  ci.md  date-time.md  docs.json  index.md  logging.md  network.md  perplexity.md  pi-dev.md  pi.md  prose.md  tts.md  vps.md
krabkrab/docs/.i18n/: README.md  glossary.ja-JP.json  glossary.zh-CN.json  zh-CN.tm.jsonl
krabkrab/docs/automation/: auth-monitoring.md  cron-jobs.md  cron-vs-heartbeat.md  gmail-pubsub.md  hooks.md  poll.md  troubleshooting.md  webhook.md
krabkrab/docs/channels/: bluebubbles.md  broadcast-groups.md  channel-routing.md  discord.md  feishu.md  googlechat.md  group-messages.md  groups.md  imessage.md  index.md  irc.md  line.md  location.md  matrix.md  mattermost.md  msteams.md  nextcloud-talk.md  nostr.md  pairing.md  signal.md  slack.md  telegram.md  tlon.md  troubleshooting.md  twitch.md  whatsapp.md  zalo.md  zalouser.md
krabkrab/docs/cli/: acp.md  agent.md  agents.md  approvals.md  browser.md  channels.md  config.md  configure.md  cron.md  dashboard.md  devices.md  directory.md  dns.md  docs.md  doctor.md  gateway.md  health.md  hooks.md  index.md  logs.md  memory.md  message.md  models.md  node.md  nodes.md  onboard.md  pairing.md  plugins.md  reset.md  sandbox.md  security.md  sessions.md  setup.md  skills.md  status.md  system.md  tui.md  uninstall.md  update.md  voicecall.md  (+1 more)
krabkrab/docs/concepts/: agent-loop.md  agent-workspace.md  agent.md  architecture.md  compaction.md  context.md  features.md  markdown-formatting.md  memory.md  messages.md  model-failover.md  model-providers.md  models.md  multi-agent.md  oauth.md  presence.md  retry.md  session-pruning.md  session-tool.md  session.md  streaming.md  system-prompt.md  timezone.md  typebox.md  typing-indicators.md  usage-tracking.md
krabkrab/docs/debug/: node-issue.md
krabkrab/docs/diagnostics/: flags.md
krabkrab/docs/gateway/: authentication.md  background-process.md  bonjour.md  bridge-protocol.md  cli-backends.md  configuration-examples.md  configuration-reference.md  configuration.md  discovery.md  doctor.md  gateway-lock.md  health.md  heartbeat.md  index.md  local-models.md  logging.md  multiple-gateways.md  network-model.md  openai-http-api.md  openresponses-http-api.md  pairing.md  protocol.md  remote-gateway-readme.md  remote.md  sandbox-vs-tool-policy-vs-elevated.md  sandboxing.md  tailscale.md  tools-invoke-http-api.md  troubleshooting.md  trusted-proxy-auth.md
krabkrab/docs/help/: debugging.md  environment.md  faq.md  scripts.md  testing.md  troubleshooting.md
krabkrab/docs/install/: ansible.md  development-channels.md  docker.md  exe-dev.md  fly.md  gcp.md  hetzner.md  index.md  installer.md  macos-vm.md  migrating.md  nix.md  node.md  northflank.mdx  podman.md  railway.mdx  render.mdx  uninstall.md  updating.md
krabkrab/docs/ja-JP/: index.md
krabkrab/docs/nodes/: audio.md  camera.md  images.md  index.md  location-command.md  media-understanding.md  talk.md  troubleshooting.md  voicewake.md
krabkrab/docs/plugins/: agent-tools.md  manifest.md  voice-call.md  zalouser.md
krabkrab/docs/providers/: anthropic.md  bedrock.md  claude-max-api-proxy.md  cloudflare-ai-gateway.md  deepgram.md  github-copilot.md  glm.md  huggingface.md  index.md  litellm.md  minimax.md  models.md  moonshot.md  nvidia.md  ollama.md  openai.md  opencode.md  zai.md  (+9 more)
krabkrab/gateway/: Cargo.toml
krabkrab/infra/: Cargo.toml
krabkrab/media/: Cargo.toml
krabkrab/memory/: Cargo.toml
krabkrab/plugins/: Cargo.toml
krabkrab/providers/: Cargo.toml
krabkrab/rust-workspace/: Cargo.toml  README.md  ts-inventory.json
krabkrab/sessions/: Cargo.toml
krabkrab/src/: common.rs  config.rs  daemon.rs  dashboard.rs  gateway.rs  lib.rs
krabkrab/tests/: allowlist_match_test.rs  channels_logging_test.rs  commands_test.rs  connectors_test.rs  core_parity_test.rs  lib_test.rs  sender_identity_test.rs  sender_label_test.rs  session_record_test.rs
krabkrab/web/: Cargo.toml
krabkrab/whatsapp-rs/: Cargo.toml
krabkrab/wizard/: Cargo.toml
(+1492 files in other folders)
