[workspace]
resolver = "2"
members = [
    "crates/openclaw-core",
    "crates/openclaw-gateway",
    "crates/openclaw-cli",
    "crates/openclaw-channels/discord",
    "crates/openclaw-channels/telegram",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["OpenClaw Team"]
license = "MIT"

[workspace.dependencies]
openclaw-core = { path = "crates/openclaw-core" }
openclaw-gateway = { path = "crates/openclaw-gateway" }
openclaw-cli = { path = "crates/openclaw-cli" }
openclaw-storage = { path = "crates/openclaw-storage" }
openclaw-discord = { path = "crates/openclaw-channels/discord" }
openclaw-telegram = { path = "crates/openclaw-channels/telegram" }

tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1.5", features = ["full"] }
tokio-tungstenite = "0.26"
reqwest = { version = "0.12", features = ["json"] }

thiserror = "2.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4.5", features = ["derive"] }

teloxide = { version = "0.13", features = ["full"] }
serenity = { version = "0.12", features = ["full"] }
slack-morphism = "1.0"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.13", features = ["v4", "serde"] }
parking_lot = "0.12"
bytes = "1.10"
once_cell = "1.20"
dashmap = "5.5"

# sqlx for database (align with teloxide dependency)
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "json", "migrate"] }

# testing utilities
mockall = "0.13"
tokio-test = "0.4"
