[package]
name = "krabkrab"
version = "2026.2.19"
edition = "2021"
authors = ["openkrab port"]
description = "Personal AI assistant - Rust port of krabkrab"
license = "MIT"

[workspace]
members = ["bin/krabkrab-cli"]

[lib]
name = "krabkrab"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "4.0"
regex = "1.10"
futures = "0.3"
futures-util = "0.3"
# reqwest 0.11 uses native-tls by default — no aws-lc-sys / NASM needed
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
walkdir = "2"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
sqlite-vec = "0.1"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
notify = "6.1"
dialoguer = "0.12.0"
toml = "1.0.2"
uuid = { version = "1.21.0", features = ["v4"] }
html2md = "0.2.15"
base64 = "0.22.1"
hmac = "0.12.1"
urlencoding = "2.1"
tokio-tungstenite = "0.21"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"

# Discord: serenity with native_tls_backend avoids rustls/aws-lc-sys
serenity = { version = "0.12.5", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "native_tls_backend",
] }

# NOTE: The following crates were removed because they transitively pull
# reqwest 0.12 → rustls 0.23 → aws-lc-sys → NASM (not available on this machine):
#   - teloxide (Telegram bot framework) — replaced by raw HTTP polling in telegram.rs
#   - twitch_api / twitch_oauth2 / twitch-irc — Twitch support deferred
#   - line-bot-sdk-rust — replaced by raw HTTP in line_client.rs
#   - slack-morphism — replaced by raw HTTP in slack_client.rs
#   - discord-rich-presence — replaced by serenity

[dev-dependencies]
tempfile = "3.4"
