[workspace]
members = [
  "agents",
  "channels",
  "cli",
  "common",
  "gateway",
  "infra",
  "media",
  "memory",
  "plugins",
  "providers",
  "sessions",
  "web",
  "wizard",
  "whatsapp-rs",
  "rust-workspace/crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nattapong Tapachoom <jonusnattapong@gmail.com>"]
license = "MIT"
repository = "https://github.com/jonusnattapong/openkrab"
description = "KrabKrab Rust workspace"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
