[package]
name = "krabkrab"
version = "0.1.0"
edition = "2021"
authors = ["openkrab port"]
description = "Proof-of-concept Rust port of openclaw (initial scaffold)"
license = "MIT"

[lib]
name = "krabkrab"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "4.0"
regex = "1.10"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.4"