[package]
name = "openclaw-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "openclaw"
path = "src/main.rs"

[dependencies]
openclaw-core.workspace = true
openclaw-gateway.workspace = true

clap.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
