[package]
name = "openclaw-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "openclaw-gateway"
path = "src/main.rs"

[dependencies]
openclaw-core.workspace = true
openclaw-storage.workspace = true
openclaw-discord = { path = "../openclaw-channels/discord" }
openclaw-telegram = { path = "../openclaw-channels/telegram" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

futures.workspace = true
async-trait.workspace = true

chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
bytes.workspace = true
once_cell.workspace = true
