[package]
name = "openclaw-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
openclaw-errors.workspace = true

image.workspace = true
resvg.workspace = true
base64.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true
