[package]
name = "openclaw-sessions"
version.workspace = true
edition.workspace = true

[dependencies]
openclaw-core.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
