[package]
name = "openclaw-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openclaw-core.workspace = true
openclaw-errors.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "process", "io-util"] }
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
tempfile = "3.16"
which = "7.0"
walkdir = "2.5"

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true
