[package]
name = "krabkrab_wizard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Onboarding wizard scaffolding for KrabKrab"

[dependencies]
anyhow.workspace = true
krabkrab_common = { path = "../common" }
