[package]
name = "openclaw-telegram"
version.workspace = true
edition.workspace = true

[dependencies]
openclaw-core.workspace = true

teloxide = { version = "0.13", features = ["full"] }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true

[dev-dependencies]
httptest = "0.11"
wiremock = "0.6"
